--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ nav a:hover {
     }
 
     .logo {
-        margin-right: 200px;
+        margin-right: auto;
     }
     .logo img {
         width: 150px;
